syntax = "proto3";
package common;

message User {
  string id = 1;
  string email = 2;
  string display_name = 3;
  repeated string roles = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message Product {
  string id = 1;
  string sku = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  int32 stock = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double unit_price = 3;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total = 4;
  string status = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}
